# duckduckgo-mcp

./: .env.example  .gitignore  README.md  app.yaml  databricks.yml  pyproject.toml
hooks/: apps_build.py
src/duckduckgo_mcp_server/: app.py  main.py  server.py
src/duckduckgo_mcp_server/static/: index.html
